# taskmonitor

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md
cmake/: Packing.cmake  TaskMonitor.cmake
config/: CMakeLists.txt  taskmonitor.conf.in  taskmonitor.service.in
debian/: changelog  control  rules  taskmonitor.install
manual/: DevelManual.md  UserManual.md
manual/assets/: RPI4-1666962900527.json  RPI4-1671016536308.json  tkm_dbbrowser_sample_project.sqbpro  tkm_process_cpu_usage.sql  tkm_process_mem_usage.sql  tkm_system_cpu_usage.sql  tkm_system_mem_usage.sql  tkm_system_psi_usage.sql
rpm/: taskmonitor.spec
shared/: Defaults.h.in  EnvelopeWriter.cpp  EnvelopeWriter.h  Helpers.cpp  Helpers.h  Options.cpp  Options.h
source/: ActionManager.cpp  ActionManager.h  Application.cpp  Application.h  CMakeLists.txt  ContextEntry.cpp  ContextEntry.h  Defaults.h.in  Dispatcher.cpp  Dispatcher.h  Helpers.cpp  Helpers.h  IClient.h  ICollector.h  IDataSource.h  IUDPSink.h  JsonWriter.cpp  JsonWriter.h  Main.cpp  NetClient.cpp  NetClient.h  NetLink.cpp  NetLink.h  NetLinkProc.cpp  NetLinkProc.h  NetLinkStats.cpp  NetLinkStats.h  NetServer.cpp  NetServer.h  Options.cpp  Options.h  ProcAcct.cpp  ProcAcct.h  ProcEntry.cpp  ProcEntry.h  ProcEvent.cpp  ProcEvent.h  ProcRegistry.cpp  ProcRegistry.h  Registry.cpp  (+33 more)
tests/: CMakeLists.txt  GTestApplication.cpp  GTestContextEntry.cpp  GTestHelpers.cpp  GTestOptions.cpp  GTestProcAcct.cpp  GTestProcEntry.cpp  GTestProcEvent.cpp  GTestProcRegistry.cpp  GTestStartupData.cpp  GTestSysProcBuddyInfo.cpp  GTestSysProcDiskStats.cpp  GTestSysProcMemInfo.cpp  GTestSysProcPressure.cpp  GTestSysProcStat.cpp  GTestSysProcWireless.cpp  GTestTCPInterface.cpp  GTestUDSInterface.cpp  gtest_application.cpp
tests/assets/: taskmonitor.conf  taskmonitor_var0.conf  taskmonitor_var1.conf  taskmonitor_var2.conf
tests/dummy/: Application.cpp  Application.h  Client.cpp  Client.h  Collector.cpp  Collector.h  Reader.cpp  Reader.h
