install(FILES
    ${CMAKE_BINARY_DIR}/taskmonitor/config/taskmonitor.conf
    DESTINATION
    ${CMAKE_INSTALL_SYSCONFDIR})
if(WITH_SYSTEMD)
    install(FILES
        ${CMAKE_BINARY_DIR}/taskmonitor/config/taskmonitor.service
        DESTINATION
        ${CMAKE_INSTALL_SYSCONFDIR}/systemd/system)
endif()
